--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ yarn-error.log*
 /test/unit/coverage/
 /test/e2e/reports/
 selenium-debug.log
-/static/oauth2.keys.json
+# /static/oauth2.keys.json
 /src/pages/blog.vue
 /src/blog.json
 
